implements booking seats features phase 3

--- a/src/cinema/threatre4_20-30.fxml
+++ b/src/cinema/threatre4_20-30.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="573.0" prefWidth="1020.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.Threatre4Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="573.0" prefWidth="1020.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinema.Threatre4_20_30Controller">
     <children>
         <Pane layoutY="505.0" prefHeight="68.0" prefWidth="1020.0" style="-fx-background-color: grey;">
             <children>
@@ -297,10 +297,11 @@
         <Label layoutX="120.0" layoutY="391.0" text="1" textFill="#d9e809" />
         <Button fx:id="gobackthreatre3" layoutX="27.0" layoutY="475.0" mnemonicParsing="false" onAction="#goBackFromThreatre1" onMouseClicked="#goBackFromThreatre1" style="-fx-background-color: white; -fx-background-radius: 100;" text="Back" textFill="#eb0b0b" />
         <Button fx:id="gohomethreatre3" layoutX="948.0" layoutY="475.0" mnemonicParsing="false" onAction="#goHomeFromThreatre1" onMouseClicked="#goHomeFromThreatre1" style="-fx-background-radius: 100;" text="Home" textFill="#f50a0a" />
-      <Button fx:id="confirm" layoutX="551.0" layoutY="470.0" mnemonicParsing="false" onAction="#confirmBtn" prefHeight="36.0" prefWidth="87.0" style="-fx-background-color: green; -fx-background-radius: 100;" text="Book" textFill="#f5f0f0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Button>
+        <Button fx:id="confirm" layoutX="551.0" layoutY="470.0" mnemonicParsing="false" onAction="#confirmBtn" prefHeight="36.0" prefWidth="87.0" style="-fx-background-color: green; -fx-background-radius: 100;" text="Book" textFill="#f5f0f0">
+            <font>
+                <Font name="System Bold" size="12.0" />
+            </font>
+        </Button>
     </children>
 </Pane>
+
